Upgrade Java version 17 for AAI modelloader
- Upgrade java version to 17
- testcase fixes
- Bump up model-loader version 1.15.0

Issue-ID: AAI-4209
Change-Id: If47f1499566d51f93435e11f5b8b7fb65979b85d
Signed-off-by: akshay.khairnar@t-systems.com <akshay.khairnar@t-systems.com>